--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_native_splash: ^2.2.19
   flutter_svg: ^2.0.5
   get_it: ^7.2.0
   image_picker: ^0.8.7+2
   intl: ^0.17.0
   uuid: ^3.0.7
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  color: "#273a69"
+  image: "assets/images/ServisGo Logo Partner.png"
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -57,8 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/ServisGo Logo Partner.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
