--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.2.19
   flutter_svg: ^2.0.5
   get_it: ^7.2.0
+  google_sign_in: ^6.1.0
   image_picker: ^0.8.7+2
   intl: ^0.17.0
   uuid: ^3.0.7
