--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/Iconly/
+    - assets/icons/Iconly/Broken/
     - assets/icons/drawer/
     - assets/icons/
     - assets/images/
