--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,11 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This application requires access to your gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This application requires camera access</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This application requires microphone access</string>
 </dict>
 </plist>
