--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_native_splash: ^2.2.19
+  flutter_polyline_points: ^1.0.0
   flutter_svg: ^2.0.5
   get_it: ^7.2.0
+  google_maps_flutter: ^2.2.8
   google_sign_in: ^6.1.0
   image_picker: ^0.8.7+5
   intl: ^0.17.0
+  location: ^4.4.0
   uuid: ^3.0.7
 
 flutter_native_splash:
