--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.2.19
   flutter_polyline_points: ^1.0.0
   flutter_svg: ^2.0.5
+  geolocator: ^9.0.2
   get_it: ^7.2.0
   google_maps_flutter: ^2.2.8
   google_sign_in: ^6.1.0
