--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -63,6 +63,8 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This application requires microphone access</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app uses your location to provide accurate directions</string>
+	<string>This app needs access to location when open.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location when in the background.</string>
 </dict>
 </plist>
