added mobile phone link

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^0.8.7+5
   intl: ^0.18.1
   location: ^4.4.0
+  url_launcher: ^6.1.11
   uuid: ^3.0.7
 
 flutter_native_splash:
