--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   firebase_auth: ^4.4.0
+  firebase_messaging: ^14.6.2
   firebase_storage: ^11.1.0
   flutter:
     sdk: flutter
