--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_local_notifications: ^14.1.1
   flutter_native_splash: ^2.2.19
   flutter_polyline_points: ^1.0.0
   flutter_svg: ^2.0.5
