--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_native_splash: ^2.2.19
   flutter_polyline_points: ^1.0.0
+  flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.5
   geolocator: ^9.0.2
   get_it: ^7.2.0
@@ -56,7 +57,13 @@ flutter_native_splash:
   ios: true
   web: false
   color: "#273a69"
-  image: "assets/images/ServisGoLogoPartner.png"
+  image: assets/images/ServisGoLogoPartner.png
+
+  android_12:
+    image: assets/images/PartnerLogoAndroid.png
+    icon_background_color: "#273a69"
+    image_dark: assets/images/PartnerLogoAndroid.png
+    icon_background_color_dark: "#273a69"
 
 dev_dependencies:
   flutter_lints: ^2.0.0
